# qcloud-iot-sdk-for-at-llsync-example

./: README.md
TencentOS_tiny_EVB_G0/: esp8266_tencent_firmware.c  mqtt_iot_explorer_tc_ch20_oled.c  tencent_firmware_module_wrapper.c  tencent_firmware_module_wrapper.h
esp32-at/: CMakeLists.txt  sdkconfig  sdkconfig.old
esp32-at/components/customized_partitions/: AT_partition_dependency.bck
esp32-at/components/customized_partitions/generation_tools/: qcloud_devinfo.sh  qcloud_modinfo.sh  qcloud_prdinfo.sh
esp32-at/components/qcloud_at/: CMakeLists.txt  Kconfig  component.mk  esp_qcloud_iot.c  qcloud_devinfo.csv  qcloud_modinfo.csv  qcloud_prdinfo.csv
esp32-at/components/qcloud_at/bin_gen_tool_src/: build.txt  qcloud_iot_bin_tool_linux.py  qcloud_iot_bin_tool_win.py  test.c  utils_cryptor.c  utils_cryptor.h
esp32-at/components/qcloud_at/include/: qcloud_iot_at.h
esp32-at/components/qcloud_at/qcloud-esp-at/include/: qcloud_at_board.h  qcloud_at_cmd.h  qcloud_at_flash.h  qcloud_at_mqtt.h  qcloud_at_wifi.h
esp32-at/components/qcloud_at/qcloud-esp-at/src/: qcloud_at_board.c  qcloud_at_cmd.c  qcloud_at_flash.c  qcloud_at_mqtt.c  qcloud_at_mqtt_ota.c
esp32-at/components/qcloud_at/qcloud-esp-at/src/wifi_config/: qcloud_wifi_config.c  wifi_config_error_handle.c  wifi_config_esp.c  wifi_config_log_handle.c
esp32-at/components/qcloud_at/qcloud_iot_c_sdk/include/: config.h  qcloud_iot_export.h
esp32-at/components/qcloud_at/qcloud_iot_c_sdk/include/exports/: qcloud_iot_export_error.h  qcloud_iot_export_gateway.h  qcloud_iot_export_mqtt.h  qcloud_iot_export_ota.h
esp32-at/components/qcloud_at/qcloud_iot_c_sdk/platform/: HAL_TCP_lwip.c
esp32-at/components/qcloud_at/qcloud_iot_c_sdk/sdk_src/: dynreg.c  gateway_api.c  gateway_common.c  mqtt_client.c  mqtt_client_publish.c  mqtt_client_subscribe.c  mqtt_client_unsubscribe.c  mqtt_client_yield.c  ota_client.c  ota_lib.c  ota_mqtt.c  qcloud_iot_log.c  system_mqtt.c  utils_httpc.c  utils_list.c
esp32-at/components/qcloud_at/qcloud_iot_c_sdk/sdk_src/internal_inc/: gateway_common.h  mqtt_client.h  ota_client.h  ota_lib.h  qcloud_iot_common.h  utils_list.h
esp32-at/components/qcloud_llsync/: CMakeLists.txt
esp32-at/components/qcloud_llsync/date_template/: ble_qiot_template.c  ble_qiot_template.h
esp32-at/components/qcloud_llsync/hal/: ble_qiot_ble_service.c
esp32-at/components/qcloud_llsync/src/core/: ble_qiot_llsync_device.c
esp32-at/components/qcloud_llsync/src/utils/: ble_qiot_utils_hmac.c  ble_qiot_utils_log.c
esp32-at/main/: app_main.c
esp32-at/module_config/module_esp32_qcloud/: at_customize.csv  sdkconfig.defaults  sdkconfig_silence.defaults
esp32-at/module_config/module_esp32_qcloud/bin_gen_tool/: devinfo_list_sample.csv  modinfo_list_sample.csv  prdinfo_list_sample.csv
